# tdevkit-cpp

./: .clang-format  .gitignore  CMakeLists.txt
tDevkit/: CMakeLists.txt
tDevkit/network/: CMakeLists.txt
tDevkit/network/base/: NetworkClient.hpp
tDevkit/network/qt-network-client/: qtNetworkClient.cpp  qtNetworkClient.hpp
tDevkit/tDevkit/: tDevkit.cpp  tDevkit.hpp
tDevkit/tDevkit/contracts/: CMakeLists.txt
tDevkit/tests/: testQtDelete.cpp  testQtGet.cpp  testQtGetDelayed.cpp  testQtHeaders.cpp  testQtPatch.cpp  testQtPost.cpp  testQtPut.cpp
tests/: CMakeLists.txt  testApiKey.cpp  testDevkit.cpp  testDevkitMock.cpp  testQtDelete.cpp  testQtGet.cpp  testQtGetDelayed.cpp  testQtHeaders.cpp  testQtPatch.cpp  testQtPost.cpp  testQtPut.cpp
twinzo/network/: CMakeLists.txt  exceptions.hpp  mock_client.hpp  network_client.hpp  qt_client.cpp  qt_client.hpp
twinzo/tdevkit/: CMakeLists.txt  areas.tpp  authorization.tpp  configuration.tpp  devices.tpp  layers.tpp  localization.tpp  sensors.tpp  tdevkit.hpp  tdevkit.tpp
twinzo/tdevkit/contracts/: CMakeLists.txt  core.pb.cc  core.pb.h  core.proto  helpers.pb.cc  helpers.pb.h  helpers.proto
